--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,16 @@
   background: orange;
 }
 
-#level-up {
+#level-up,
+#life-lost,
+#final-score {
  font-size: 100px;
  position: absolute;
- margin-top: 180px;
+ margin-top: 260px;
  margin-left: 30px;
  display: none;
+}
+
+#life-lost {
+ font-size: 80px;
 }
